# hdir

./: CHANGELOG.md  hdir.cabal
app/: Main.hs
src/: DirSummary.hs  Metrics.hs  MyLib.hs
